# Expanse-TCR

./: .gitignore  README.md  build_null_training.py  pyproject.toml  score_stim_vs_unstim.py
.github/workflows/: ci.yml
examples/: README.md
examples/toy_null/: 1_1-1.tsv  1_1-2.tsv  2_1-1.tsv  2_1-2.tsv
examples/toy_stim/: stim.tsv  unstim.tsv
src/expanse_tcr/: build_null_training.py
